--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>hibernate-core</artifactId>
       <version>6.4.2.Final</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
   </dependencies>
 
   <build>
